--- a/Energize.Web/ClientApp/src/style/index.css
+++ b/Energize.Web/ClientApp/src/style/index.css
@@ -21,16 +21,14 @@ a:hover {
     transition: 0.25s;
 }
 
-.spacer {
-    height: 85px;
-}
-
 header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     background-color: #ededed;
     border-bottom: 2px solid #A51C15;
     box-shadow: 0px 2px 10px #333333;
     padding: 5px;
-    position: absolute;
     width: 100%;
     z-index: 10;
 }
@@ -51,7 +49,7 @@ header > img {
     margin: 0;
     color: #5C5C5C;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
 }
 
 .links {
@@ -82,3 +80,51 @@ header > img {
     margin: 0;
     padding: 0;
 }
+
+.summary {
+    position: fixed;
+    top: 2;
+    right: 0;
+    font-size: 14px;
+    background-color: #EDEDED;
+    padding: 1%;
+    box-shadow: 0 0 5px #333333;
+}
+
+.summary > div {
+    border-bottom: 1px solid #A51C15;
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.summary > span, .summary > span > span {
+    display: block;
+}
+
+.summary > span {
+    margin-left: 15px;
+}
+
+.summary > span > span {
+    margin-left: 30px;
+    font-size: 12px;
+}
+
+.summary > span:before, .summary > span > span:before {
+    content: '/ ';
+}
+
+.fabTop {
+    bottom: 0;  
+    right: 0;
+    position: fixed;
+    width: 56px;
+    height: 56px;
+    color: white;
+    font-size: 50px;
+    background-color: #A51C15;
+    border-radius: 9999px;
+    box-shadow: 0 0 5px #333333;
+    margin: 10px;
+    border: 2px solid #A51C15;}
