--- a/Energize.Web/ClientApp/src/style/index.css
+++ b/Energize.Web/ClientApp/src/style/index.css
@@ -49,7 +49,7 @@ header > img {
     margin: 0;
     color: #5C5C5C;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 .links {
@@ -90,7 +90,7 @@ header > img {
     background-color: #EDEDED;
     padding: 1%;
     box-shadow: 0 0 5px #333333;
-    border-radius: 3px;
+    border-radius: 2px;
 }
 
 .summary > div {
@@ -118,18 +118,19 @@ header > img {
 }
 
 .fabTop {
-    bottom: 0;  
+    bottom: 0;
     right: 0;
     position: fixed;
     width: 56px;
     height: 56px;
     color: white;
-    font-size: 25px;
+    font-size: 35px;
     background-color: #A51C15;
     border-radius: 9999px;
     box-shadow: 0 0 5px #333333;
     margin: 10px;
     border: 2px solid #A51C15;
+    font-weight: bolder;
 }
 
 .content-img {
@@ -140,7 +141,7 @@ header > img {
     margin-top: 1%;
     margin-bottom: 1%;
     border: 1px solid #333333;
-    border-left: 5px solid #A51C15;
+    border-left: 3px solid #A51C15;
     border-radius: 3px;
 }
 
