--- a/Energize.Web/ClientApp/src/style/index.css
+++ b/Energize.Web/ClientApp/src/style/index.css
@@ -64,14 +64,6 @@ header > button {
     transition: 0.25s;
 }
 
-footer {
-    background: #262828;
-    padding: 10px;
-    color: white;
-    box-shadow: 0 -2px 5px #333333;
-    width: 100%;
-}
-
 hr {
     margin: 0;
     margin-bottom: 10px;
@@ -103,6 +95,7 @@ h4 {
     display: flex;
     flex-direction: column;
     box-shadow: 2px 0 5px #333333;
+    z-index: 5;
 }
 
 .active {
@@ -141,41 +134,18 @@ h4 {
     border-left: 5px solid #262828;
 }
 
-.command {
-    background-color: #EDEDED;
-    border-left: 2px solid #A51C15;
-    padding: 1%;
-    margin-bottom: 1%;
-}
-
-.command > u {
-    font-size: large;
-}
-
 .content {
     margin: 0;
     padding: 0;
     padding-bottom: 1%;
     color: #333333;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 93vh;
 }
 
 .content-container {
     padding-right: 20%;
     padding-left: 10%;
-}
-
-.summary {
-    position: fixed;
-    top: 2;
-    right: 35px;
-    font-size: 14px;
-    background-color: #EDEDED;
-    padding: 1%;
-    box-shadow: 0 0 5px #333333;
-    border-radius: 2px;
-    display: block;
 }
 
 @media only screen and (max-width: 767px) {
@@ -191,75 +161,6 @@ h4 {
         padding-right: 5%;
         padding-left: 5%;
     }
-
-    .summary {
-        display: none;
-    }
-}
-
-.summary > div {
-    border-bottom: 1px solid #A51C15;
-    margin-bottom: 5px;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.summary > span, .summary > span > span {
-    display: block;
-}
-
-.summary > span {
-    margin-left: 15px;
-}
-
-.summary > span > span {
-    margin-left: 30px;
-    font-size: 12px;
-}
-
-.summary > button {
-    width: 56px;
-    height: 56px;
-    color: white;
-    font-size: 30px;
-    background-color: #A51C15;
-    border-radius: 9999px;
-    box-shadow: 0 0 5px #333333;
-    border: 2px solid #A51C15;
-    outline-width: 0;
-}
-
-.summary > span:before, .summary > span > span:before {
-    content: '/ ';
-}
-
-.fabTop {
-    bottom: 0;
-    right: 0;
-    position: fixed;
-    width: 56px;
-    height: 56px;
-    color: white;
-    font-size: 30px;
-    background-color: #A51C15;
-    border-radius: 9999px;
-    box-shadow: 0 0 5px #333333;
-    margin: 10px;
-    border: 2px solid #A51C15;;
-    z-index: 999;
-    outline-width: 0;
-}
-
-.content-img {
-    width: 100%;
-    max-width: 500px;
-    display: block;
-    box-shadow: 0 0 5px #333333;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    border: 1px solid #333333;
-    border-left: 3px solid #A51C15;
-    border-radius: 3px;
 }
 
 .twemoji {
