--- a/Energize.Web/ClientApp/src/style/index.css
+++ b/Energize.Web/ClientApp/src/style/index.css
@@ -141,11 +141,8 @@ h4 {
     color: #333333;
     overflow-y: auto;
     height: 93vh;
-}
-
-.content-container {
-    padding-right: 20%;
-    padding-left: 10%;
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (max-width: 767px) {
@@ -155,11 +152,6 @@ h4 {
 
     .menu {
         display: none;
-    }
-
-    .content-container {
-        padding-right: 5%;
-        padding-left: 5%;
     }
 }
 
