--- a/Energize.Web/ClientApp/src/style/home.css
+++ b/Energize.Web/ClientApp/src/style/home.css
@@ -5,25 +5,23 @@
 }
 
 #visualizer {
-    height: 400px;
+    height: 600px;
     filter: blur(6px);
     margin-bottom: 0;
 }
 
 .intro {
-    height: 400px;
-    margin-top: -400px;
+    height: 600px;
+    margin-top: -600px;
     color: white;
     width: 100%;
     z-index: 999;
     position: relative;
-    box-shadow: 0 2px 10px #333333;
     margin-bottom: 0;
-    border-bottom: 5px solid #2c2f34;
 }
 
 .intro-description {
-    margin-top: 4%;
+    margin-top: 100px;
     text-align: center;
     font-size: 40px;
     font-weight: 700;
@@ -35,13 +33,14 @@
     display: block;
     width: 200px;
     margin: 0 auto;
-    margin-top: 40px;
+    margin-top: 100px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 999px;
     box-shadow: 0 0 10px black;
 }
 
-.invite-btn, .learn-more-btn {
+.invite-btn,
+.learn-more-btn {
     text-align: center;
     margin: 0 auto;
     border-radius: 40px;
@@ -56,7 +55,7 @@
 .invite-btn {
     background-color: rgba(0, 0, 0, 0.3);
     color: white;
-    margin-top: 80px;
+    margin-top: 140px;
 }
 
 .invite-btn:hover {
@@ -75,26 +74,45 @@
     border: 2px solid #cccccc;
 }
 
-.getting-started {
-    background: white;
-    padding: 1%;
-    width: 100%;
-    height: 49.2vh;
+.pros {
+    text-align: center;
+    background-color: #212121;
+    color: white;
+    font-size: 20px;
 }
 
-.getting-started > h2 {
-    margin: 0;
+.pros>div {
+    padding: 20px;
+}
+
+.pros>div>img {
+    border-radius: 999px;
+    box-shadow: 0 0 10px black;
+    border: 4px solid #A51C15;
+    background: rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+    width: 25%;
 }
 
 @media only screen and (max-width: 767px) {
-    .invite-btn, .learn-more-btn {
+    #visualizer {
+        height: 100vh;
+    }
+
+    .intro {
+        height: 100vh;
+        margin-top: -100vh;
+    }
+
+    .invite-btn,
+    .learn-more-btn {
         margin: 0 auto;
         margin-top: 30px;
     }
 
     .logo {
         margin: 0 auto;
-        margin-top: 30px;
+        margin-top: 30%;
     }
 
     .intro-description {
