--- a/Energize.Web/ClientApp/src/style/home.css
+++ b/Energize.Web/ClientApp/src/style/home.css
@@ -5,14 +5,16 @@
 }
 
 #visualizer {
-    height: 600px;
+    height: 500px;
     filter: blur(6px);
     margin-bottom: 0;
+    box-shadow: none;
+    border-bottom: 5px solid #212121;
 }
 
 .intro {
-    height: 600px;
-    margin-top: -600px;
+    height: 500px;
+    margin-top: -500px;
     color: white;
     width: 100%;
     z-index: 999;
@@ -74,34 +76,66 @@
     border: 2px solid #cccccc;
 }
 
+.pros-container {
+    background-color: #212121;
+    padding-top: 20px;
+}
+
 .pros {
     text-align: center;
-    background-color: #212121;
     color: white;
     font-size: 20px;
+    margin: 0 auto;
 }
 
-.pros>div {
+.pros>div>div {
     padding: 20px;
+    box-shadow: 0 0 10px black;
+    background-color: #212121;
+    border-radius: 3px;
+    color: white;
+    height: 300px;
+    margin-bottom: 30px;
 }
 
-.pros>div>img {
+.pros>div>div>i {
+    font-size: 100px;
+    margin-bottom: 20px;
+}
+
+.pros>div>div>span {
+    font-size: 25px;
+    font-weight: bolder;
+}
+
+.stats {
+    width: 100%;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    height: 400px;
+    padding: 20px;
+    box-shadow: inset 0 2px 10px black;
+}
+
+.stat {
+    padding: 10px;
     border-radius: 999px;
     box-shadow: 0 0 10px black;
-    border: 4px solid #A51C15;
-    background: rgba(0, 0, 0, 0.3);
-    margin-bottom: 20px;
-    width: 25%;
+    font-size: 30px;
+    margin-top: 25%;
+    border: 2px solid white;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 @media only screen and (max-width: 767px) {
     #visualizer {
-        height: 100vh;
+        height: 95vh;
     }
 
     .intro {
-        height: 100vh;
-        margin-top: -100vh;
+        height: 90vh;
+        margin-top: -90vh;
     }
 
     .invite-btn,
@@ -117,5 +151,12 @@
 
     .intro-description {
         display: none;
+    }
+
+    .stat {
+        margin-top: 5%;
+        font-size: 20px;
+        padding: 0;
+        border: 1px solid white;
     }
 }
