--- a/Energize.Web/ClientApp/src/style/home.css
+++ b/Energize.Web/ClientApp/src/style/home.css
@@ -115,7 +115,7 @@
     text-align: center;
     height: 400px;
     padding: 20px;
-    box-shadow: inset 0 2px 10px black;
+    box-shadow: inset 0 0 10px black;
 }
 
 .stat {
@@ -126,6 +126,54 @@
     margin-top: 25%;
     border: 2px solid white;
     background: rgba(0, 0, 0, 0.6);
+}
+
+.changelog {
+    color: white;
+    background-color: #212121;
+    text-align: justify;
+    font-size: 20px;
+}
+
+.changelog>div>h3 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.changelog>div>ul, .changelog>div>ul>ul{
+    padding: 0;
+    list-style-type: none;
+}
+
+.commit {
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.commit>a {
+    padding: 10px;
+    box-shadow: 0 0 10px black;
+    display: block;
+    border-left: 6px solid transparent;
+}
+
+.commit>a>img {
+    height: 25px;
+    border-radius: 999px;
+    float: right;
+}
+
+.commit>a>span {
+    float: right;
+    margin-right: 10px;
+}
+
+.commit>a:hover {
+    background-color: #191919;
+    color: white;
+    text-decoration: none;
+    border-left: 6px solid #A51C15;
+    transform: scale(1.1);
 }
 
 @media only screen and (max-width: 767px) {
